Watermark images with PREGENERATED label
All images in Code/ and images/ directories have been watermarked
to indicate they are pregenerated artifacts.

This watermarking is only on the main branch.
The with-precomputed-artifacts branch contains unwatermarked originals.

--- a/@local/local-qe-figs-and-tables.sty
+++ b/@local/local-qe-figs-and-tables.sty
@@ -8,7 +8,7 @@
 %
 % This file is also sourced by local-qe.sty to avoid duplication
 
-\providecommand{\pregenmark}{}
+\providecommand{\pregenmark}{}\renewcommand{\pregenmark}{PRECOMPUTED}
 \ProvidesPackage{local-qe-figs-and-tables}[2025/10/11 HAFiscal QE figures/tables minimal package]
 
 % ═══════════════════════════════════════════════════════════════════════════
