Fix nested document error: use real subfiles package instead of broken \input wrapper
Problem: The \providecommand{\subfile}[1]{\input{#1}} definition caused nested
\begin{document} environments when Subfiles/*.tex called \subfile{../Figures/...}
because \input does not strip document wrappers from included files.

Solution: Replace with \RequirePackage{subfiles} which properly handles nested
documents by stripping \documentclass and \begin{document}...\end{document}
from included files.

This works because:
- In Latest/Public: subfiles package is already loaded by \documentclass{subfiles}
  so RequirePackage is effectively a no-op
- In QE: documentclass is econsocart (not subfiles), so RequirePackage loads
  the subfiles package, providing the correct \subfile command

Tested: All Subfiles/*.tex files that use \subfile now compile correctly.

--- a/@local/local-qe-figs-and-tables.sty
+++ b/@local/local-qe-figs-and-tables.sty
@@ -145,10 +145,14 @@
 \providecommand{\lfoot}[2]{}  % Left footer (no-op for standalone)
 \providecommand{\rfoot}[2]{}  % Right footer (no-op for standalone)
 
-% Subfile command - in standalone mode, use \input instead
-% Note: \subfile from subfiles package won't work in standalone econsocart mode
-% For standalone compilation, we need to use \input directly
-\providecommand{\subfile}[1]{\input{#1}}  % Convert \subfile to \input for standalone
+% Subfile package for proper nested document handling
+% The subfiles package correctly strips \documentclass and \begin{document}...\end{document}
+% from included files, allowing standalone compilation of each file while also
+% supporting inclusion via \subfile{path} without nested document environment errors.
+%
+% In Latest/Public: subfiles package is loaded by \documentclass{subfiles}
+% In QE: subfiles package is loaded here (since documentclass is econsocart)
+\RequirePackage{subfiles}
 
 % (moved END marker below path macros)
 
